<resources>
    <string name="app_name">Dark Annihilation</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="warning_text">Please, enable the internet connection and re-enter the game to register there!</string>
    <string name="change_loud_of_sound_effects">Change loud of sound effects</string>
    <string name="change_loud_of_sound_music">Change loud of background music</string>
    <string name="vibration">Vibration</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="smooth_text">Smooth text</string>
    <string name="apply">Apply</string>
    <string name="exit">Exit</string>
    <string name="later">Later</string>
    <string name="i_enabled_internet_and_want_to_register">I enabled internet and want to register</string>
</resources>