<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/warning_text"
        android:textColor="#00416A"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#87CEFA"
        android:padding="6dp"
        android:text="@string/exit"
        android:textColor="#00416A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2000"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/button_enable_internet"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#87CEFA"
        android:padding="6dp"
        android:text="@string/later"
        android:textColor="#00416A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_enable_internet"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView2000"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_enable_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#87CEFA"
        android:padding="6dp"
        android:text="@string/i_enabled_internet_and_want_to_register"
        android:textColor="#00416A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2000"
        app:layout_constraintStart_toStartOf="@+id/textView2000"
        app:layout_constraintTop_toBottomOf="@+id/button_exit" />

    <TextView
        android:id="@+id/textView2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>