<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ru.warfare.darkannihilation.Game
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/seekArcEffects"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:padding="30dp"
        app:arcColor="@color/white"
        app:arcWidth="7dp"
        app:clockwise="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        app:progressColor="#6A5ACD"
        app:rotation="180"
        app:roundEdges="true"
        app:startAngle="30"
        app:sweepAngle="300"
        app:touchInside="true" />

    <TextView
        android:id="@+id/angleEffects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/seekArcEffects"
        app:layout_constraintEnd_toEndOf="@+id/seekArcEffects"
        app:layout_constraintStart_toStartOf="@+id/seekArcEffects"
        app:layout_constraintTop_toTopOf="@+id/seekArcEffects" />

    <TextView
        android:id="@+id/textViewEffects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_loud_of_sound_effects"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekArcEffects"
        app:layout_constraintEnd_toEndOf="@+id/seekArcEffects"
        app:layout_constraintStart_toStartOf="@+id/seekArcEffects" />

    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/seekArcMusic"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:padding="30dp"
        app:arcColor="@color/white"
        app:arcWidth="7dp"
        app:clockwise="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        app:progressColor="#6A5ACD"
        app:rotation="180"
        app:roundEdges="true"
        app:startAngle="30"
        app:sweepAngle="300"
        app:touchInside="true" />

    <TextView
        android:id="@+id/textViewMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_loud_of_sound_music"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekArcMusic"
        app:layout_constraintEnd_toEndOf="@+id/seekArcMusic"
        app:layout_constraintStart_toStartOf="@+id/seekArcMusic" />

    <TextView
        android:id="@+id/angleMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/seekArcMusic"
        app:layout_constraintEnd_toEndOf="@+id/seekArcMusic"
        app:layout_constraintStart_toStartOf="@+id/seekArcMusic"
        app:layout_constraintTop_toTopOf="@+id/seekArcMusic" />

    <TextView
        android:id="@+id/textVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/vibration"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/stickySwitch"
        app:layout_constraintEnd_toStartOf="@+id/angleEffects"
        app:layout_constraintStart_toEndOf="@+id/angleMusic" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stickySwitch"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekArcMusic"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textViewMusic"
        app:layout_constraintVertical_bias="0.211"
        app:ss_animationDuration="450"
        app:ss_animationType="curved"
        app:ss_iconPadding="25dp"
        app:ss_iconSize="30dp"
        app:ss_leftText="Disable"
        app:ss_rightText="Enable"
        app:ss_selectedTextSize="16sp"
        app:ss_sliderBackgroundColor="#87CEFA"
        app:ss_switchColor="#6A5ACD"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/gameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gameView"
        app:layout_constraintVertical_bias="0.155" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="#6A5ACD"
        android:gravity="center"
        android:padding="0dp"
        android:spinnerMode="dialog"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/gameView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/gameView"
        app:layout_constraintVertical_bias="0.577"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_show="true"
        app:spinner_arrow_animate="true"
        app:spinner_arrow_padding="0dp"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.2dp"
        app:spinner_item_array="@array/languages"
        app:spinner_popup_animation="fade"
        app:spinner_popup_background="#87CEFA"
        app:spinner_popup_elevation="14dp" />

    <TextView
        android:id="@+id/textSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/choose_your_language"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>